--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
+
 body{
-    background-color:#4b009c;
-    list-style:none;
+ background-image: url("BG-Background.jpg")
+ 
 }
 
 a {
@@ -9,6 +10,6 @@ a {
 }
 
 li {
-display: inline;
+
 padding-left: 5px; 
 }
